--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,6 @@
 
 
 Ngozi Ndukauba <ndukaubangozi@gmail.com>  
+Martins Okanlawon <oyedelenewton@gmail.com>
+Alexa Orrico <210@holbertonschool.com>	
+Joann Vuong <130@holbertonschool.com> 	
